extends Node2D

onready var shoot1 = get_node("Shoot1")
onready var shoot2 = get_node("Shoot2")
onready var shoot3 = get_node("Shoot3")
onready var charge = get_node("Charge")
onready var jump = get_node("Jump")
onready var slide = get_node("Slide")
onready var hit = get_node("Hit")
onready var die = get_node("Die")
onready var astrocrush = get_node("AstroCrush")
onready var overload = get_node("Overload")
onready var land = get_node("Land")
onready var intro = get_node("Intro")



func _ready():
	pass


